# tls-pq-bench

./: .gitignore  Cargo.toml  README.md  justfile
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
analyzer/: Cargo.toml
analyzer/src/: aggregate.rs  args.rs  compare.rs  discovery.rs  error.rs  load.rs  main.rs  model.rs  output.rs
analyzer/src/aggregate/: mod.rs  stats.rs
analyzer/src/compare/: deltas.rs  mod.rs
analyzer/src/load/: mod.rs  parse.rs  validate.rs
analyzer/src/model/: aggregate.rs  compare.rs  metadata.rs  mod.rs  ordering.rs  validation.rs
bench-common/: Cargo.toml
bench-common/src/: cert.rs  lib.rs
bench-runner/: Cargo.toml
bench-runner/src/: main.rs
bench-server/: Cargo.toml
bench-server/src/: main.rs
benchmarks/: baseline.toml  sanity.toml
common/: Cargo.toml
common/src/: cert.rs  error.rs  lib.rs  prelude.rs  protocol.rs  telemetry.rs  tls.rs
docs/: TODO.md  environment.md  experiment-plan.md  implementation-strategy.md  measurement-methodology.md  protocols.md  results-template.md  runbook.md  scheduled-benchmarks.md
ops/: scheduled-benchmarks.env.example  server.env.example
ops/systemd/: tls-pq-bench-full.service  tls-pq-bench-full.timer  tls-pq-bench-lite.service  tls-pq-bench-lite.timer  tls-pq-bench-server.service  tls-pq-bench-track.service  tls-pq-bench-track.timer
runner/: Cargo.toml
runner/src/: args.rs  bench.rs  config.rs  error.rs  main.rs  metadata.rs  tls.rs
runner/src/bench/: http1.rs  iteration.rs  mod.rs  raw.rs  run.rs
runner/src/config/: mod.rs  utils.rs
scripts/: analyze_results.py  generate_benchmark_matrix.py  generate_remote_schedule_configs.sh  run_scheduled_benchmarks.sh  run_server_set.sh
server/: Cargo.toml  build.rs
server/src/: args.rs  cert.rs  error.rs  main.rs  server.rs  tls.rs
server/src/server/: http1.rs  mod.rs  raw.rs
