[workspace]
members = ["common", "runner", "server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"

[workspace.dependencies]
aws-lc-rs = "1"
common = { path = "common" }
claims = "0.8"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
rcgen = "0.14"
rstest = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
