[workspace]
members = ["common", "runner", "server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aws-lc-rs = "1"
base64 = "0.22"
cargo-husky = { version = "1", default-features = false, features = [
  "user-hooks",
] }
claims = "0.8"
clap = { version = "4.5", features = ["derive"] }
common = { path = "common" }
miette = { version = "7", features = ["fancy"] }
rcgen = "0.14"
rstest = "0.26"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "aws_lc_rs",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "tls12",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"
