[package]
name = "analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
common.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
claims.workspace = true
tempfile.workspace = true

[lints]
workspace = true
