[package]
name = "bench-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bench-common.workspace = true
clap.workspace = true
miette.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true

[lints]
workspace = true
