[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
miette.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
claims.workspace = true
cargo-husky.workspace = true

[lints]
workspace = true
