[package]
name = "runner"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
common.workspace = true
miette.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
