[package]
name = "runner"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
common.workspace = true
futures.workspace = true
miette.workspace = true
rustls.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
claims.workspace = true

[lints]
workspace = true
