[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
common.workspace = true
miette.workspace = true
rustls.workspace = true
thiserror.workspace = true
tokio-rustls.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
claims.workspace = true

[lints]
workspace = true
